tests/valid/function/local_let_rec_direct_call.facet
fn main() -> unrestricted isize {
  let rec id_local(x: unrestricted isize) -> unrestricted isize {
    x
  }
  in (id_local 41)
}
