tests/invalid/borrow_error/nested_deref_non_ref.facet
fn bad(mut x: unrestricted isize) -> unrestricted isize {
    (*(*x))
}
